--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,23 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/assets/images/vite.svg" />
+		<!-- <link rel="icon" type="image/svg+xml" href="/assets/images/vite.svg" /> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="css/base/normalize.css" />
 		<link rel="stylesheet" href="css/base/base.css" />
 		<link rel="stylesheet" href="css/styles.css" />
-		<title>Vite App</title>
+		<title>Wordle</title>
 	</head>
 	<body>
-		<h1>WEB WITH VITE</h1>
-		<!-- <img src="./assets/images/cute-cat.webp" alt="" /> -->
+		<main class="main">
+			<h1 class="title">WORDLE</h1>
+			<div id="game" class="game"></div>
+		
+			<!-- Teclado virtual -->
+			<div id="keyboard" class="keyboard"></div>
+		</main>
+		<div id="pop-up" class="pop-up"></div>
+		
 		<script type="module" src="./js/index.js"></script>
 	</body>
 </html>
